--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
+    "netlify": "^13.1.11",
+    "netlify-cli": "^17.9.0",
     "readline": "^1.3.0"
   }
 }
